--- a/project-2.html
+++ b/project-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -46,6 +46,9 @@
             <li class="header__link-wrapper">
               <a href="./index.html#contact" class="header__link"> Контакты </a>
             </li>
+            <li class="header__link-wrapper">
+              <a href="./project-2-en.html" class="header__link"> ENG </a>
+            </li>
           </ul>
           <div class="header__main-ham-menu-cont">
             <img
@@ -78,6 +81,10 @@
 
             <li class="header__sm-menu-link">
               <a href="./index.html#contact"> Контакты </a>
+            </li>
+
+            <li class="header__sm-menu-link">
+              <a href="./project-2-en.html#contact"> ENG </a>
             </li>
           </ul>
         </div>
