--- a/project-1.html
+++ b/project-1.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" type="image/png" href="./assets/png/my-photo.png"/>
     <title>Chat for Everyone</title>
-    <meta name="description" content="Страница о проекте Chat for Everyone" />
+    <meta name="description" content="About Chat for Everyone App" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -28,26 +28,26 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">Антон Дехтерев</span>
+          <span class="header__logo-sub">Anton Dehterev</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
             <li class="header__link-wrapper">
-              <a href="./index.html" class="header__link"> Главная </a>
+              <a href="./index.html" class="header__link"> Home </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#about" class="header__link"> Обо мне </a>
+              <a href="./index.html#about" class="header__link"> About </a>
             </li>
             <li class="header__link-wrapper">
               <a href="./index.html#projects" class="header__link">
-                Проекты
+                Projects
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#contact" class="header__link"> Контакты </a>
+              <a href="./index.html#contact" class="header__link"> Contact </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./project-1-en.html" class="header__link"> ENG </a>
+              <a href="./project-1-ru.html" class="header__link"> RUS </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -68,23 +68,23 @@
         <div class="header__sm-menu-content">
           <ul class="header__sm-menu-links">
             <li class="header__sm-menu-link">
-              <a href="./index.html"> Главная </a>
+              <a href="./index.html"> Home </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#about"> Обо мне </a>
+              <a href="./index.html#about"> About </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Проекты </a>
+              <a href="./index.html#projects"> Projects </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#contact"> Контакты </a>
+              <a href="./index.html#contact"> Contact </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./project-1-en.html"> ENG </a>
+              <a href="./project-1-ru.html"> RUS </a>
             </li>
           </ul>
         </div>
@@ -95,9 +95,8 @@
         <h1 class="heading-primary">Chat for Everyone</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            На странице приведено описание приложения Chat for Everyone:</br>обзор, 
-            инструменты, используемые при разработке приложения, 
-            а также ссылки на интернет-версию и репозиторий проекта.
+            This page contains the case study of Chat for Everyone App:</br>
+            Project Overview, Tools Used, Live Link and Repository Link.
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -105,7 +104,7 @@
             href="https://mihamixfromgb.github.io/chat-app-react.io/"
             class="btn btn--bg"
             target="_blank"
-          >Интернет-версия</a>
+          >Live Link</a>
         </div>
       </div>
     </section>
@@ -121,24 +120,23 @@
           </div>
           <div class="project-details__content-main">
             <div class="project-details__desc">
-              <h3 class="project-details__content-title">Обзор проекта</h3>
+              <h3 class="project-details__content-title">Projetc Overview</h3>
               <p class="project-details__desc-para">
-                Chat for Everyone это приложение, которое позволяет каждому создавать 
-                свой чат или несколько чатов, приглашать друзей, коллег или партнеров по бизнесу 
-                для общения посредством отправки текстовых сообщений.
+                Chat for Everyone is the app that Everyone can create a chat or many chats, 
+                invite friends, coworkers or business partners for text messaging.
               </p>
               <p class="project-details__desc-para">
-                Аутентификаия выполнена с помощью серверной службы Firebase Authentication 
-                посредством ввода адреса электронной почты и пароля.
-                Для хранения данных пользователя, чатов и сообщений используется 
-                NoSQL облачная база данных Firebase.
+                User authentication was made using the Firebase Authentication SDK
+                by submitting an email and password.
+                Firebase Realtime Database (NoSQL cloud database) is used 
+                to store user profiles, chats and messages.
               </p>
               <p class="project-details__desc-para">
-                Для ознакомления создан тестовый пользователь: student@mail.ru / 123456.
+                There was created a test user for review: student@mail.ru / 123456.
               </p>
             </div>
             <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Инструменты</h3>
+              <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
@@ -152,17 +150,17 @@
               </div>
             </div>
             <div class="project-details__links">
-              <h3 class="project-details__content-title">Ознакомиться подробнее</h3>
+              <h3 class="project-details__content-title">Details</h3>
               <a
                 href="https://mihamixfromgb.github.io/chat-app-react.io/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
-              >Интернет-версия</a>
+              >Live Link</a>
               <a
                 href="https://github.com/MihaMixFromGB/chat-app-react-ts"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
-                >Репозиторий</a>
+                >Repository</a>
             </div>
           </div>
         </div>
