--- a/project-2-ru.html
+++ b/project-2-ru.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" type="image/png" href="./assets/png/my-photo.png"/>
-    <title>Chat for Everyone</title>
-    <meta name="description" content="About Chat for Everyone App" />
+    <title>Clothing Shop</title>
+    <meta name="description" content="Страница о проекте Clothing Shop" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -28,26 +28,26 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">Anton Dehterev</span>
+          <span class="header__logo-sub">Антон Дехтерев</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
             <li class="header__link-wrapper">
-              <a href="./index-en.html" class="header__link"> Home </a>
+              <a href="./index-ru.html" class="header__link"> Главная </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index-en.html#about" class="header__link"> About </a>
+              <a href="./index-ru.html#about" class="header__link"> Обо мне </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index-en.html#projects" class="header__link">
-                Projects
+              <a href="./index-ru.html#projects" class="header__link">
+                Проекты
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index-en.html#contact" class="header__link"> Contact </a>
+              <a href="./index-ru.html#contact" class="header__link"> Контакты </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./project-1.html" class="header__link"> RUS </a>
+              <a href="./project-2.html" class="header__link"> ENG </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -68,23 +68,23 @@
         <div class="header__sm-menu-content">
           <ul class="header__sm-menu-links">
             <li class="header__sm-menu-link">
-              <a href="./index-en.html"> Home </a>
+              <a href="./index-ru.html"> Главная </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index-en.html#about"> About </a>
+              <a href="./index-ru.html#about"> Обо мне </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index-en.html#projects"> Projects </a>
+              <a href="./index-ru.html#projects"> Проекты </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index-en.html#contact"> Contact </a>
+              <a href="./index-ru.html#contact"> Контакты </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./project-1.html"> RUS </a>
+              <a href="./project-2.html#contact"> ENG </a>
             </li>
           </ul>
         </div>
@@ -92,19 +92,20 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Chat for Everyone</h1>
+        <h1 class="heading-primary">Clothing Shop</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            This page contains the case study of Chat for Everyone App:</br>
-            Project Overview, Tools Used, Live Link and Repository Link.
+            На странице приведено описание макета сайта Clothing Shop:</br>обзор, 
+            инструменты, используемые при разработке макета, 
+            а также ссылки на&nbsp;интернет-версию и репозиторий проекта.
           </p>
         </div>
         <div class="project-cs-hero__cta">
           <a
-            href="https://mihamixfromgb.github.io/chat-app-react.io/"
+            href="https://mihamixfromgb.github.io/2_html_css/"
             class="btn btn--bg"
             target="_blank"
-          >Live Link</a>
+          >Интернет-версия</a>
         </div>
       </div>
     </section>
@@ -113,54 +114,52 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/jpeg/project-chat-app.jpeg"
+              src="./assets/jpeg/project-shop.jpeg"
               alt="Project Image"
               class="project-details__showcase-img"
             />
           </div>
           <div class="project-details__content-main">
             <div class="project-details__desc">
-              <h3 class="project-details__content-title">Projetc Overview</h3>
+              <h3 class="project-details__content-title">Обзор проекта</h3>
               <p class="project-details__desc-para">
-                Chat for Everyone is the app that Everyone can create a chat or many chats, 
-                invite friends, coworkers or business partners for text messaging.
+                Сайт интернет-магазина по продаже верхней одежды, сверстанный по макету из Figma. 
+                Выполнена вёрстка четырех страниц: главная, каталог мужской одежды, 
+                корзина, страница регистрации. Вёрстка адаптирована для версий desktop, tablet и mobile.
               </p>
               <p class="project-details__desc-para">
-                User authentication was made using the Firebase Authentication SDK
-                by submitting an email and password.
-                Firebase Realtime Database (NoSQL cloud database) is used 
-                to store user profiles, chats and messages.
+                Меню и другие раскрывающие списки созданы средствами 
+                HTML и CSS без&nbsp;использования Javascript.
               </p>
               <p class="project-details__desc-para">
-                There was created a test user for review: student@mail.ru / 123456.
+                Макет Figma - 
+                <a
+                  href="https://www.figma.com/file/7XhT5EWfZX0W6ohgd57Pny/shop"
+                  target="_blank">https://www.figma.com/file/7XhT5EWfZX0W6ohgd57Pny/shop</a>.
               </p>
             </div>
             <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
+              <h3 class="project-details__content-title">Инструменты</h3>
               <div class="skills">
                 <div class="skills__skill">HTML</div>
-                <div class="skills__skill">CSS</div>
-                <div class="skills__skill">TypeScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">Redux Toolkit</div>
-                <div class="skills__skill">React Router Dom</div>
-                <div class="skills__skill">Firebase</div>
+                <div class="skills__skill">SCSS</div>
+                <div class="skills__skill">Live SASS Compiler</div>
                 <div class="skills__skill">GIT</div>
                 <div class="skills__skill">GitHub Pages</div>
               </div>
             </div>
             <div class="project-details__links">
-              <h3 class="project-details__content-title">Details</h3>
+              <h3 class="project-details__content-title">Ознакомиться подробнее</h3>
               <a
-                href="https://mihamixfromgb.github.io/chat-app-react.io/"
+                href="https://mihamixfromgb.github.io/2_html_css/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
-              >Live Link</a>
+              >Интернет-версия</a>
               <a
-                href="https://github.com/MihaMixFromGB/chat-app-react-ts"
+                href="https://github.com/MihaMixFromGB/2_html_css"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
-                >Repository</a>
+              >Репозиторий</a>
             </div>
           </div>
         </div>
