--- a/index-ru.html
+++ b/index-ru.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,26 +28,26 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">Anton Dehterev</span>
+          <span class="header__logo-sub">Антон Дехтерев</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
             <li class="header__link-wrapper">
-              <a href="./index-en.html" class="header__link"> Home </a>
+              <a href="./index-ru.html" class="header__link"> Главная </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index-en.html#about" class="header__link"> About </a>
+              <a href="./index-ru.html#about" class="header__link"> Обо мне </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index-en.html#projects" class="header__link">
-                Projects
+              <a href="./index-ru.html#projects" class="header__link">
+                Проекты
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index-en.html#contact" class="header__link"> Contact </a>
+              <a href="./index-ru.html#contact" class="header__link"> Контакты </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html" class="header__link"> RUS </a>
+              <a href="./index.html" class="header__link"> ENG </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -68,23 +68,23 @@
         <div class="header__sm-menu-content">
           <ul class="header__sm-menu-links">
             <li class="header__sm-menu-link">
-              <a href="./index-en.html"> Home </a>
+              <a href="./index-ru.html"> Главная </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index-en.html#about"> About </a>
+              <a href="./index-ru.html#about"> Обо мне </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index-en.html#projects"> Projects </a>
+              <a href="./index-ru.html#projects"> Проекты </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index-en.html#contact"> Contact </a>
+              <a href="./index-ru.html#contact"> Контакты </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index-en.html"> RUS </a>
+              <a href="./index.html"> ENG </a>
             </li>
           </ul>
         </div>
@@ -92,15 +92,16 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">HEY, I'M ANTON DEHTEREV</h1>
+        <h1 class="heading-primary">Привет всем!</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            I wanna be a member of a professional and friendly web development team, 
-            that&nbsp;I&nbsp;could continuously develop my professional skills to archieve high team's results.
+            Меня зовут Антон: "Движение - жизнь".</br>Стремлюсь стать частью профессиональной и 
+            дружной команды веб&nbsp;разработчиков, в которой смог бы постоянно развивать свои 
+            профессиональные навыки для достижения высоких командных результатов.
           </p>
         </div>
         <div class="home-hero__cta">
-          <a href="./#projects" class="btn btn--bg">Projects</a>
+          <a href="./#projects" class="btn btn--bg">Проекты</a>
         </div>
       </div>
       <div class="home-hero__mouse-scroll-cont">
@@ -110,41 +111,45 @@
     <section id="about" class="about sec-pad">
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
-          <span class="heading-sec__main">About</span>
+          <span class="heading-sec__main">Обо мне</span>
           <span class="heading-sec__sub">
-            Here you'll find more information about me, what I do,<br>and my current skills mostly in terms of web developer
+            Здесь приведены сведения о том, чем я занимаюсь, о моих навыках</br> 
+            и в целом обо мне, как о веб разработчике
           </span>
         </h2>
         <div class="about__content">
           <div class="about__content-main">
-            <h3 class="about__content-title">Get to know me!</h3>
+            <h3 class="about__content-title">Давайте знакомиться!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
-                I'm <strong>a Junior Web Developer</strong> 
-                from Novosibirsk. I wanna be a member of a&nbsp;professional and friendly web development team, 
-                that&nbsp;I&nbsp;could continuously develop my professional skills to archieve high team's results.
+                Привет! Я,
+                <strong>Антон Дехтерев</strong>,
+                начинающий<strong> веб разработчик </strong> 
+                из Новосибирска. Стремлюсь стать частью профессиональной и 
+                дружной команды веб&nbsp;разработчиков, в которой смог бы постоянно развивать свои 
+                профессиональные навыки для достижения высоких командных результатов.
               </p>
               <p class="about__content-details-para">
-                I'm currently completing the Fullstack Javascript course at GeekBrains 
-                (the duration of course is 16 months) and open to new job opportunities.
-                My web development projects are presented in the
-                <a href="./index-en.html#projects"><strong>Projects</strong></a> section.
+                Завершаю обучение по программе Fullstack Javascript в GeekBrains 
+                (длительность программы - 16 месяцев) и открыт для предложений о&nbsp;работе. 
+                Мои работы по веб&nbsp;разработке представлены в разделе 
+                <a href="./index-ru.html#projects"><strong>Проекты</strong></a>.
               </p>
               <p class="about__content-details-para">
-                One of my current job duties is workflow automation.
-                I program in C#, more information on my CV 
-                (<a 
+                На текущем месте работы одним из направлений является автоматизация рабочих процессов.
+                Пишу на C#, подробнее в резюме на 
+                <a 
                   href="https://novosibirsk.hh.ru/resume/3ae8fb1dff0b0ffefb0039ed1f57716c6b6745"
                   target="_blank"
-                >hh.ru</a>).
+                >hh.ru</a>.
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
-              >Contact</a
+              >Контакты</a
             >
           </div>
           <div class="about__content-skills">
-            <h3 class="about__content-title">My  Skills</h3>
+            <h3 class="about__content-title">Мои навыки</h3>
             <div class="skills">
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
@@ -177,10 +182,10 @@
     <section id="projects" class="projects sec-pad">
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-bg">
-          <span class="heading-sec__main">Projects</span>
+          <span class="heading-sec__main">Проекты</span>
           <span class="heading-sec__sub">
-            Here you'll find the personal web development projects that I've created for myself 
-            during&nbsp;my&nbsp;study at GeekBrains and self-study.
+            Здесь приведены мои работы по веб разработке, 
+            созданные мною в ходе обучения в&nbsp;GeekBrains и самостоятельного изучения материалов.
           </span>
         </h2>
 
@@ -197,14 +202,15 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Chat for Everyone</h3>
               <p class="projects__row-content-desc">
-                Chat for Everyone is the app that Everyone can create a chat or many chats, 
-                invite friends, coworkers or business partners for text messaging.
+                Chat for Everyone это приложение, которое позволяет каждому создавать 
+                свой чат или несколько чатов, приглашать друзей, коллег или партнеров по бизнесу 
+                для общения посредством отправки текстовых сообщений.
               </p>
               <a
-                href="./project-1-en.html"
+                href="./project-1-ru.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Подробнее</a
               >
             </div>
           </div>
@@ -220,15 +226,15 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Clothing Shop</h3>
               <p class="projects__row-content-desc">
-                The online clothing store is created using the website template from Figma.
-                An adaptive layout for four pages is made. There are main, catalog of man's clothing, 
-                cart, registration page. It's made for desktop, tablet and mobile.
+                Сайт интернет-магазина по продаже верхней одежды, сверстанный по макету из Figma. 
+                Выполнена вёрстка четырех страниц: главная, каталог мужской одежды, 
+                корзина, страница регистрации. Вёрстка адаптирована для версий desktop, tablet и mobile.
               </p>
               <a
-                href="./project-2-en.html"
+                href="./project-2-ru.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
-                >Case Study</a
+                >Подробнее</a
               >
             </div>
           </div>
@@ -238,9 +244,10 @@
     <section id="contact" class="contact sec-pad dynamicBg">
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
-          <span class="heading-sec__main heading-sec__main--lt">Contact</span>
+          <span class="heading-sec__main heading-sec__main--lt">Контакты</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-           Feel free to contact me by submitting the form below and I'll get back to you as soon as possible
+            Предложения о работе Вы можете направить мне, заполнив форму ниже, 
+          </br>а я постараюсь ответить Вам, как можно скорее
           </span>
         </h2>
         <div class="contact__form-container">
@@ -250,10 +257,10 @@
             class="contact__form"
           >
             <div class="contact__form-field">
-              <label class="contact__form-label" for="name">Name</label>
+              <label class="contact__form-label" for="name">Имя</label>
               <input
                 required
-                placeholder="Enter Your Name"
+                placeholder="Введите Ваше имя"
                 type="text"
                 class="contact__form-input"
                 name="name"
@@ -261,10 +268,10 @@
               />
             </div>
             <div class="contact__form-field">
-              <label class="contact__form-label" for="email">Email</label>
+              <label class="contact__form-label" for="email">Адрес электронной почты</label>
               <input
                 required
-                placeholder="Enter Your Email"
+                placeholder="Введите адрес Вашей электронной почты"
                 type="text"
                 class="contact__form-input"
                 name="email"
@@ -272,19 +279,19 @@
               />
             </div>
             <div class="contact__form-field">
-              <label class="contact__form-label" for="message">Message</label>
+              <label class="contact__form-label" for="message">Сообщение</label>
               <textarea
                 required
                 cols="30"
                 rows="10"
                 class="contact__form-input"
-                placeholder="Enter Your Message"
+                placeholder="Введите Ваше сообщение"
                 name="message"
                 id="message"
               ></textarea>
             </div>
             <button type="submit" class="btn btn--theme contact__btn">
-              Send
+              Отправить
             </button>
           </form>
         </div>
