--- a/project-1-ru.html
+++ b/project-1-ru.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" type="image/png" href="./assets/png/my-photo.png"/>
-    <title>Clothing Shop</title>
-    <meta name="description" content="About Clothing Shop Maket" />
+    <title>Chat for Everyone</title>
+    <meta name="description" content="Страница о проекте Chat for Everyone" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -28,26 +28,26 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">Anton Dehterev</span>
+          <span class="header__logo-sub">Антон Дехтерев</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
             <li class="header__link-wrapper">
-              <a href="./index-en.html" class="header__link"> Home </a>
+              <a href="./index-ru.html" class="header__link"> Главная </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index-en.html#about" class="header__link"> About </a>
+              <a href="./index-ru.html#about" class="header__link"> Обо мне </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index-en.html#projects" class="header__link">
-                Projects
+              <a href="./index-ru.html#projects" class="header__link">
+                Проекты
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index-en.html#contact" class="header__link"> Contact </a>
+              <a href="./index-ru.html#contact" class="header__link"> Контакты </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./project-2.html" class="header__link"> RUS </a>
+              <a href="./project-1.html" class="header__link"> ENG </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -68,23 +68,23 @@
         <div class="header__sm-menu-content">
           <ul class="header__sm-menu-links">
             <li class="header__sm-menu-link">
-              <a href="./index-en.html"> Home </a>
+              <a href="./index-ru.html"> Главная </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index-en.html#about"> About </a>
+              <a href="./index-ru.html#about"> Обо мне </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index-en.html#projects"> Projects </a>
+              <a href="./index-ru.html#projects"> Проекты </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index-en.html#contact"> Contact </a>
+              <a href="./index-ru.html#contact"> Контакты </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./project-2.html"> RUS </a>
+              <a href="./project-1.html"> ENG </a>
             </li>
           </ul>
         </div>
@@ -92,19 +92,20 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Clothing Shop</h1>
+        <h1 class="heading-primary">Chat for Everyone</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            This page contains the case study of Clothing Shop Maket:</br>
-            Project Overview, Tools Used, Live Link and Repository Link.
+            На странице приведено описание приложения Chat for Everyone:</br>обзор, 
+            инструменты, используемые при разработке приложения, 
+            а также ссылки на интернет-версию и репозиторий проекта.
           </p>
         </div>
         <div class="project-cs-hero__cta">
           <a
-            href="https://mihamixfromgb.github.io/2_html_css/"
+            href="https://mihamixfromgb.github.io/chat-app-react.io/"
             class="btn btn--bg"
             target="_blank"
-          >Live Link</a>
+          >Интернет-версия</a>
         </div>
       </div>
     </section>
@@ -113,51 +114,55 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/jpeg/project-shop.jpeg"
+              src="./assets/jpeg/project-chat-app.jpeg"
               alt="Project Image"
               class="project-details__showcase-img"
             />
           </div>
           <div class="project-details__content-main">
             <div class="project-details__desc">
-              <h3 class="project-details__content-title">Project Overview</h3>
+              <h3 class="project-details__content-title">Обзор проекта</h3>
               <p class="project-details__desc-para">
-                The online clothing store is created using the website template from Figma.
-                An adaptive layout for four pages is made. There are main, catalog of man's clothing, 
-                cart, registration page. It's made for desktop, tablet and mobile.
+                Chat for Everyone это приложение, которое позволяет каждому создавать 
+                свой чат или несколько чатов, приглашать друзей, коллег или партнеров по бизнесу 
+                для общения посредством отправки текстовых сообщений.
               </p>
               <p class="project-details__desc-para">
-                Menu and other drop-down lists are made using HTML and CSS without Javascript.
+                Аутентификаия выполнена с помощью серверной службы Firebase Authentication 
+                посредством ввода адреса электронной почты и пароля.
+                Для хранения данных пользователя, чатов и сообщений используется 
+                NoSQL облачная база данных Firebase.
               </p>
               <p class="project-details__desc-para">
-                The website template - 
-                <a
-                  href="https://www.figma.com/file/7XhT5EWfZX0W6ohgd57Pny/shop"
-                  target="_blank">https://www.figma.com/file/7XhT5EWfZX0W6ohgd57Pny/shop</a>.
+                Для ознакомления создан тестовый пользователь: student@mail.ru / 123456.
               </p>
             </div>
             <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Tools Used</h3>
+              <h3 class="project-details__content-title">Инструменты</h3>
               <div class="skills">
                 <div class="skills__skill">HTML</div>
-                <div class="skills__skill">SCSS</div>
-                <div class="skills__skill">Live SASS Compiler</div>
+                <div class="skills__skill">CSS</div>
+                <div class="skills__skill">TypeScript</div>
+                <div class="skills__skill">React</div>
+                <div class="skills__skill">Redux Toolkit</div>
+                <div class="skills__skill">React Router Dom</div>
+                <div class="skills__skill">Firebase</div>
                 <div class="skills__skill">GIT</div>
                 <div class="skills__skill">GitHub Pages</div>
               </div>
             </div>
             <div class="project-details__links">
-              <h3 class="project-details__content-title">Details</h3>
+              <h3 class="project-details__content-title">Ознакомиться подробнее</h3>
               <a
-                href="https://mihamixfromgb.github.io/2_html_css/"
+                href="https://mihamixfromgb.github.io/chat-app-react.io/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
-              >Live Link</a>
+              >Интернет-версия</a>
               <a
-                href="https://github.com/MihaMixFromGB/2_html_css"
+                href="https://github.com/MihaMixFromGB/chat-app-react-ts"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
-              >Repository</a>
+                >Репозиторий</a>
             </div>
           </div>
         </div>
