--- a/project-2.html
+++ b/project-2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" type="image/png" href="./assets/png/my-photo.png"/>
     <title>Clothing Shop</title>
-    <meta name="description" content="Страница о проекте Clothing Shop" />
+    <meta name="description" content="About Clothing Shop Maket" />
 
     <link rel="stylesheet" href="css/style.css" />
 
@@ -28,26 +28,26 @@
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">Антон Дехтерев</span>
+          <span class="header__logo-sub">Anton Dehterev</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
             <li class="header__link-wrapper">
-              <a href="./index.html" class="header__link"> Главная </a>
+              <a href="./index.html" class="header__link"> Home </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#about" class="header__link"> Обо мне </a>
+              <a href="./index.html#about" class="header__link"> About </a>
             </li>
             <li class="header__link-wrapper">
               <a href="./index.html#projects" class="header__link">
-                Проекты
+                Projects
               </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./index.html#contact" class="header__link"> Контакты </a>
+              <a href="./index.html#contact" class="header__link"> Contact </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./project-2-en.html" class="header__link"> ENG </a>
+              <a href="./project-2-ru.html" class="header__link"> RUS </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
@@ -68,23 +68,23 @@
         <div class="header__sm-menu-content">
           <ul class="header__sm-menu-links">
             <li class="header__sm-menu-link">
-              <a href="./index.html"> Главная </a>
+              <a href="./index.html"> Home </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#about"> Обо мне </a>
+              <a href="./index.html#about"> About </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#projects"> Проекты </a>
+              <a href="./index.html#projects"> Projects </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./index.html#contact"> Контакты </a>
+              <a href="./index.html#contact"> Contact </a>
             </li>
 
             <li class="header__sm-menu-link">
-              <a href="./project-2-en.html#contact"> ENG </a>
+              <a href="./project-2-ru.html"> RUS </a>
             </li>
           </ul>
         </div>
@@ -95,9 +95,8 @@
         <h1 class="heading-primary">Clothing Shop</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            На странице приведено описание макета сайта Clothing Shop:</br>обзор, 
-            инструменты, используемые при разработке макета, 
-            а также ссылки на&nbsp;интернет-версию и репозиторий проекта.
+            This page contains the case study of Clothing Shop Maket:</br>
+            Project Overview, Tools Used, Live Link and Repository Link.
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -105,7 +104,7 @@
             href="https://mihamixfromgb.github.io/2_html_css/"
             class="btn btn--bg"
             target="_blank"
-          >Интернет-версия</a>
+          >Live Link</a>
         </div>
       </div>
     </section>
@@ -121,25 +120,24 @@
           </div>
           <div class="project-details__content-main">
             <div class="project-details__desc">
-              <h3 class="project-details__content-title">Обзор проекта</h3>
+              <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                Сайт интернет-магазина по продаже верхней одежды, сверстанный по макету из Figma. 
-                Выполнена вёрстка четырех страниц: главная, каталог мужской одежды, 
-                корзина, страница регистрации. Вёрстка адаптирована для версий desktop, tablet и mobile.
+                The online clothing store is created using the website template from Figma.
+                An adaptive layout for four pages is made. There are main, catalog of man's clothing, 
+                cart, registration page. It's made for desktop, tablet and mobile.
               </p>
               <p class="project-details__desc-para">
-                Меню и другие раскрывающие списки созданы средствами 
-                HTML и CSS без&nbsp;использования Javascript.
+                Menu and other drop-down lists are made using HTML and CSS without Javascript.
               </p>
               <p class="project-details__desc-para">
-                Макет Figma - 
+                The website template - 
                 <a
                   href="https://www.figma.com/file/7XhT5EWfZX0W6ohgd57Pny/shop"
                   target="_blank">https://www.figma.com/file/7XhT5EWfZX0W6ohgd57Pny/shop</a>.
               </p>
             </div>
             <div class="project-details__tools-used">
-              <h3 class="project-details__content-title">Инструменты</h3>
+              <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">SCSS</div>
@@ -149,17 +147,17 @@
               </div>
             </div>
             <div class="project-details__links">
-              <h3 class="project-details__content-title">Ознакомиться подробнее</h3>
+              <h3 class="project-details__content-title">Details</h3>
               <a
                 href="https://mihamixfromgb.github.io/2_html_css/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
-              >Интернет-версия</a>
+              >Live Link</a>
               <a
                 href="https://github.com/MihaMixFromGB/2_html_css"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
-              >Репозиторий</a>
+              >Repository</a>
             </div>
           </div>
         </div>
